Fix modals overlaping with the secondary navigation bar in community page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -430,7 +430,7 @@ pre[class*="language-"] {
 
 .communitySubRow {
   background-color: #f8f8f8;
-  z-index: 2000;
+  z-index: 100;
 }
 
 .communitySub {
@@ -439,7 +439,7 @@ pre[class*="language-"] {
   padding-bottom: 15px;
   position: sticky;
   top: 60px;
-  z-index: 2000;
+  z-index: 1000;
 }
 
 .communitySub ul {
